# libbpm

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  acinclude.m4  aclocal.m4  aminclude.am  autogen.sh  bpm_defs.h  bpm_units.h  bpm_version.h  bpm_version.h.in  configure  configure.ac  doxygen.cfg  libbpm-config.in  libbpm.pc.in  version.c
bpm/: Makefile.am  Makefile.in
bpmanalysis/: Makefile.am  Makefile.in  ana_compute_residual.c  ana_def_cutfn.c  ana_get_svd_coeffs.c  ana_set_cutfn.c  bpm_analysis.h
bpmcalibration/: Makefile.am  Makefile.in  bpm_calibration.h  calibrate.c  setup_calibration.c
bpmdsp/: Makefile.am  Makefile.in  apply_filter.c  bpm_dsp.h  calculate_filter_coefficients.c  create_filter.c  create_resonator_representation.c  create_splane_representation.c  ddc.c  delete_filter.c  discrete_fourier_transforms.c  filter_impulse_response.c  filter_step_response.c  gaussian_filter_coeffs.c  norm_phase.c  normalise_filter.c  print_filter.c  print_filter_representation.c  zplane_transform.c
bpminterface/: Makefile.am  Makefile.in  bpm_evtnum.c  bpm_interface.h  bpm_verbose.c
bpmmessages/: Makefile.am  Makefile.in  bpm_error.c  bpm_messages.h  bpm_warning.c
bpmnr/: Makefile.am  Makefile.in  bpm_nr.h  dround.c  gsl_blas.c  gsl_block.c  gsl_linalg.c  gsl_matrix.c  gsl_vector.c  nr_checks.c  nr_complex.c  nr_fit.c  nr_four1.c  nr_gammln.c  nr_gammq.c  nr_gcf.c  nr_gser.c  nr_levmar.c  nr_median.c  nr_quadinterpol.c  nr_ran1.c  nr_rangauss.c  nr_ranuniform.c  nr_realft.c  nr_seed.c  nr_select.c  nr_sinc.c
bpmorbit/: Makefile.am  Makefile.in  bpm_orbit.h  get_bend.c  get_bpmhit.c  vm.c
bpmprocess/: Makefile.am  Makefile.in  bpm_process.h  check_saturation.c  correct_gain.c  ddc_sample_waveform.c  ddc_waveform.c  downmix_waveform.c  fft_waveform.c  fit_diodepulse.c  fit_fft.c  fit_waveform.c  get_IQ.c  get_pedestal.c  get_pos.c  get_slope.c  get_t0.c  postprocess_waveform.c  process_caltone.c  process_diode.c  process_dipole.c  process_monopole.c  process_waveform.c
bpmrf/: Makefile.am  Makefile.in  bpm_rf.h  rf_addLO.c  rf_amplify.c  rf_amplify_complex.c  rf_mixer.c  rf_phase_shifter.c  rf_rectify.c  rf_setup.c
bpmsimulation/: Makefile.am  Makefile.in  add_mode_response.c  bpm_simulation.h  digitise.c  generate_bpmsignal.c  get_mode_amplitude.c  get_mode_response.c  set_temp.c  set_time.c
bpmwf/: Makefile.am  Makefile.in  bpm_wf.h  complexwf.c  doublewf.c  freq_to_sample.c  intwf.c  sample_to_freq.c  sample_to_time.c  time_to_sample.c  wfstats.c
documentation/: libbpm.ps  libbpm.tag
documentation/html/: add__mode__response_8c-source.html  add__mode__response_8c.html  add__mode__response_8c__incl.md5  ana__compute__residual_8c-source.html  ana__compute__residual_8c.html  ana__compute__residual_8c__incl.md5  ana__def__cutfn_8c-source.html  ana__def__cutfn_8c.html  ana__def__cutfn_8c__incl.md5  ana__get__svd__coeffs_8c-source.html  ana__get__svd__coeffs_8c.html  ana__get__svd__coeffs_8c__incl.md5  ana__set__cutfn_8c-source.html  ana__set__cutfn_8c.html  ana__set__cutfn_8c__incl.md5  annotated.html  apply__filter_8c-source.html  bpm__analysis_8h-source.html  bpm__analysis_8h.html  bpm__analysis_8h__incl.md5  bpm__calibration_8h-source.html  bpm__calibration_8h.html  bpm__calibration_8h__incl.md5  bpm__defs_8h-source.html  bpm__dsp_8h-source.html  bpm__dsp_8h.html  bpm__dsp_8h__dep__incl.map  bpm__dsp_8h__dep__incl.md5  bpm__dsp_8h__incl.md5  bpm__error_8c-source.html  bpm__error_8c.html  bpm__error_8c__incl.md5  bpm__evtnum_8c-source.html  bpm__interface_8h-source.html  bpm__interface_8h.html  bpm__interface_8h__incl.md5  bpm__messages_8h-source.html  bpm__messages_8h.html  bpm__messages_8h__incl.md5  bpm__nr_8h-source.html  (+387 more)
documentation/latex/: add__mode__response_8c.tex  add__mode__response_8c__incl.eps  add__mode__response_8c__incl.md5  ana__compute__residual_8c.tex  ana__compute__residual_8c__incl.eps  ana__compute__residual_8c__incl.md5  ana__def__cutfn_8c.tex  ana__def__cutfn_8c__incl.eps  ana__def__cutfn_8c__incl.md5  ana__get__svd__coeffs_8c.tex  ana__get__svd__coeffs_8c__incl.eps  ana__get__svd__coeffs_8c__incl.md5  ana__set__cutfn_8c.tex  ana__set__cutfn_8c__incl.eps  ana__set__cutfn_8c__incl.md5  annotated.tex  bpm__analysis_8h.tex  bpm__analysis_8h__incl.eps  bpm__analysis_8h__incl.md5  bpm__calibration_8h.tex  bpm__calibration_8h__incl.eps  bpm__calibration_8h__incl.md5  bpm__dsp_8h.tex  bpm__dsp_8h__dep__incl.eps  bpm__dsp_8h__dep__incl.md5  bpm__dsp_8h__incl.eps  bpm__dsp_8h__incl.md5  bpm__error_8c.tex  bpm__error_8c__incl.eps  bpm__error_8c__incl.md5  bpm__interface_8h.tex  bpm__interface_8h__incl.eps  bpm__interface_8h__incl.md5  bpm__messages_8h.tex  bpm__messages_8h__incl.eps  bpm__messages_8h__incl.md5  bpm__nr_8h.tex  bpm__nr_8h__dep__incl.eps  bpm__nr_8h__dep__incl.md5  bpm__nr_8h__incl.eps  (+334 more)
examples/: README  bpmtest.c  online_proc.c
